--- a/admin_gudang/barang_masuk.html
+++ b/admin_gudang/barang_masuk.html
@@ -280,8 +280,8 @@
 											</div>
 										</div>
 										<div class="tab-content">
-											<table class="table" id="tbl_list_barang_masuk">
-												<thead>
+											<table class="table m-datatable" id="tbl_list_barang_masuk">
+												<!-- <thead>
 													<tr>
 														<th>No</th>
 														<th>Tanggal</th>
@@ -342,8 +342,8 @@
 															<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses</a>
 														</td>
 													</tr>
-												</tbody>
-											</table>>
+												</tbody> -->
+											</table>
 										</div>
 									</div>
 								</div>
@@ -384,7 +384,7 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			var tbl_list_barang_masuk = $('#tbl_list_barang_masuk').mDatatable({
 				data: {
 					saveState: {cookie: false},
@@ -454,6 +454,64 @@
 				}
 
 				],
+			});
+		</script> -->
+		<script>
+			var datatable;
+
+			$(document).ready(function() {
+				datatable = $('.m-datatable').mDatatable({
+					data: {
+						type: 'remote',
+						source: {
+							read: {
+								url: 'data.php' //Data dari database
+							}
+						},
+						serverPaging: true,
+						serverFiltering: true,
+						serverSorting: true
+					},
+					search: {
+						input: $('#generalSearch'),
+					},
+					columns: [
+					{
+						field: 'no',
+						title: 'No',
+						textAlign: 'center',
+						width: 50,
+						sortable: false,
+						template: function(row, rowIndex, datatable) {
+							return ((datatable.getCurrentPage() - 1) * datatable.getPageSize()) + rowIndex + 1;
+						}
+					}, {
+						field: 'tanggal',
+						title: 'Tanggal',
+						textAlign: 'center'
+
+					}, {
+						field: 'kode_barang',
+						title: 'Kode',
+						textAlign: 'center'
+					}, {
+						field: 'nama_barang',
+						title: 'Nama Barang',
+						textAlign: 'center',
+					}, {
+						field: 'jumlah_barang',
+						title: 'Jumlah',
+						textAlign: 'center',
+					}, {
+						field: 'aksi',
+						title: 'Aksi',
+						textAlign: 'center',
+						template: function (row) {
+							return '<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses '+row.id+'</a>';
+						}
+					} 
+					]
+				});
 			});
 		</script>
 		<!--end::Page Snippets -->
