Admin Finance. invoice barang. dan manajemen harga

--- a/admin_finance/invoice_barang.html
+++ b/admin_finance/invoice_barang.html
@@ -281,10 +281,12 @@
 												<tr>
 													<th>No</th>
 													<th>Tanggal</th>
+													<th>Jatuh Tempo</th>
+
 													<th>No Invoice</th>
 													<th>Nama Pelanggan</th>
-													<th>No Telpon</th>
-													<th>Status</th>
+													<th>Tipe</th>
+													<th>Nilai</th>
 													<th>Aksi</th>
 												</tr>
 											</thead>
