--- a/admin_kantor/buat_nota.html
+++ b/admin_kantor/buat_nota.html
@@ -392,6 +392,14 @@
 												<input class="form-control m-input" type="date" value="" id="tanggal_pembuatan_spk">
 											</div>
 										</div>
+										<div  class="form-group m-form__group row">
+											<label  class="col-3 col-form-label">
+												Catatan
+											</label>
+											<div class="col-9">
+												<textarea  style="resize: none" class="form-control m-input " id="catatan" rows="3">lorem ipsum dolor sit amet</textarea>
+											</div>
+										</div>
 										<!--end: Search Form -->
 										<!--begin: Datatable -->
 										<!-- <div class="m_datatable" id="local_data"></div> -->
