--- a/admin_kantor/spk_komplain.html
+++ b/admin_kantor/spk_komplain.html
@@ -414,7 +414,15 @@
 															<textarea  style="resize: none;font-size: 1.2rem" class="form-control m-input" name="keterangan_komplain"rows="3">Pipa Bocor dan Remote Ac tidak berfungsi</textarea>
 														</div>
 													</div>
-													<div style="margin-top: 30px" align="center">
+													<div  class="form-group m-form__group row">
+														<label  class="col-2 col-form-label">
+															Catatan
+														</label>
+														<div class="col-10">
+															<textarea style="resize: none" class="form-control m-input " id="catatan" rows="3">lorem ipsum dolor sit amet</textarea>
+														</div>
+													</div>
+													<div style="margin-top: 20px" align="center">
 														<button id="btn_terbitkan_spk" type="button" class="btn btn-primary btn_pemasangan">Terbitkan SPK</button>
 													</div>
 												</div>
