--- a/admin_kantor/tambah_spk_survey.html
+++ b/admin_kantor/tambah_spk_survey.html
@@ -452,6 +452,14 @@
 													<input class="form-control m-input" type="text" value="Bpk Suhadi" id="penanggung_jawab_proyek">
 												</div>
 											</div>
+											<div  class="form-group m-form__group row">
+												<label  class="col-3 col-form-label">
+													Catatan
+												</label>
+												<div class="col-9">
+													<textarea style="resize: none" class="form-control m-input " id="catatan" rows="3">lorem ipsum dolor sit amet</textarea>
+												</div>
+											</div>
 											<div style="margin-top: 15px" align="center">
 												<button data-toggle="modal" data-target="#modal_tambah_pemasangan" type="button" class="btn btn-success btn_tambah_ac ">Tambah AC</button>
 											</div>
