--- a/admin_toko/print_spk_servis.html
+++ b/admin_toko/print_spk_servis.html
@@ -407,6 +407,16 @@
 							</tr>
 						</table>
 					</div>
+					<div style="margin-top: 30px" class="m-portlet__body">
+						<div  class="form-group m-form__group row">
+							<label  class="col-xl-12">
+								Catatan
+							</label>
+							<div class="col-xl-12">
+								<textarea disabled="" style="resize: none" class="form-control m-input " id="catatan" rows="3">lorem ipsum dolor sit amet</textarea>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>	
 		</div>
