--- a/admin_toko/rincian_spk_pemasangan_free.html
+++ b/admin_toko/rincian_spk_pemasangan_free.html
@@ -405,6 +405,16 @@
 										</table>
 										<!--end: Datatable -->
 									</div>
+									<div class="m-portlet__body">
+										<div  class="form-group m-form__group row">
+											<label  class="col-xl-12">
+												Catatan
+											</label>
+											<div class="col-xl-12">
+												<textarea disabled="" style="resize: none" class="form-control m-input " id="catatan" rows="3">lorem ipsum dolor sit amet</textarea>
+											</div>
+										</div>
+									</div>
 									<div class="m-portlet__body gambar_pemasangan">
 										<div class="m-accordion__item">
 											<div class="m-accordion__item-head collapsed" role="tab" id="m_accordion_1_item_3_head" data-toggle="collapse" href="#m_accordion_1_item_3_body" aria-expanded="    false">
