--- a/admin_toko/rincian_spk_survey.html
+++ b/admin_toko/rincian_spk_survey.html
@@ -691,6 +691,16 @@
 											</div>
 										</div>
 									</div>
+									<div class="m-portlet__body">
+										<div  class="form-group m-form__group row">
+											<label  class="col-xl-12">
+												Catatan
+											</label>
+											<div class="col-xl-12">
+												<textarea disabled="" style="resize: none" class="form-control m-input " id="catatan" rows="3">lorem ipsum dolor sit amet</textarea>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
