--- a/admin_gudang/master_stock.html
+++ b/admin_gudang/master_stock.html
@@ -424,7 +424,7 @@
 														<th>Nama Item</th>
 														<th>Tipe</th>
 														<th>Merek</th>
-														<th>Jumlah</th>
+														<th>Limit</th>
 														<th>Satuan</th>
 														<th>Keterangan</th>
 														<th>Gambar</th>
@@ -679,7 +679,7 @@
 					width: 70
 				},
 				{
-					field: 'Jumlah',
+					field: 'Limit',
 					textAlign: 'center',
 					width: 60
 				},
