--- a/admin_gudang/tambah_surat_jalan.html
+++ b/admin_gudang/tambah_surat_jalan.html
@@ -49,7 +49,7 @@
 			}
 
 			.modal-dialog {
-				max-width: 450px;
+				max-width: 550px;
 			}
 		</style>
 	</head>
@@ -493,13 +493,13 @@
 						<div class="col-9">
 							<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="nama_barang">
 								<option value="1">
-									AC Split 1/2 PK Malaysia
+									01231239829 || AC Split 1/2 PK Malaysia
 								</option>
 								<option value="2">
-									AC Daikin 1 PK 
+									012312fsg34 || AC Daikin 1 PK 
 								</option>
 								<option value="3">
-									AC Split 1 PK Thailand
+									7o302129829 || AC Split 1 PK Thailand
 								</option>
 							</select>
 						</div>
