--- a/admin_gudang/proses_barang_masuk.html
+++ b/admin_gudang/proses_barang_masuk.html
@@ -442,7 +442,7 @@
 					textAlign: 'center',
 				},
 				{
-					field: 'Serian Number',
+					field: 'Serial Number',
 					textAlign: 'center',
 				}
 
