Perbaikan table penawaran

--- a/admin_kantor/buat_penawaran.html
+++ b/admin_kantor/buat_penawaran.html
@@ -494,27 +494,10 @@
 													<td>1</td>
 													<td>Jasa pemasangan</td>
 													<td>
-														<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="model_ac">
-															<option value="1">
-																Model 1
-															</option>
-															<option value="2">
-																Model 2
-															</option>
-															<option value="3">
-																Model 3
-															</option>
-														</select>
+														Model 1
 													</td>
 													<td>
-														<div class="input-group">
-															<input id="" type="text" class="form-control m-input" value="1" aria-describedby="basic-addon2">
-															<div class="input-group-append">
-																<span class="input-group-text" id="basic-addon2">
-																	Unit
-																</span>
-															</div>
-														</div>
+														2 Unit
 													</td>
 													<td>
 														<input disabled="" class="form-control m-input" type="text" value="Rp1,650,000" id="">
@@ -527,27 +510,10 @@
 													<td>2</td>
 													<td>Pipa Refrigrant</td>
 													<td>
-														<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="model_ac">
-															<option value="1">
-																Model 1
-															</option>
-															<option value="2">
-																Model 2
-															</option>
-															<option value="3">
-																Model 3
-															</option>
-														</select>
+														Model 2
 													</td>
 													<td>
-														<div class="input-group">
-															<input id="" type="text" class="form-control m-input" value="1" aria-describedby="basic-addon2">
-															<div class="input-group-append">
-																<span class="input-group-text" id="basic-addon2">
-																	meter
-																</span>
-															</div>
-														</div>
+														3 meter
 													</td>
 													<td>
 														<input disabled="" class="form-control m-input" type="text" value="Rp143,000" id="">
@@ -560,27 +526,10 @@
 													<td>3</td>
 													<td>Kable Kontrol Supreme</td>
 													<td>
-														<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="model_ac">
-															<option value="1">
-																Model 1
-															</option>
-															<option value="2">
-																Model 2
-															</option>
-															<option value="3">
-																Model 3
-															</option>
-														</select>
+														Model 3
 													</td>
 													<td>
-														<div class="input-group">
-															<input id="" type="text" class="form-control m-input" value="1" aria-describedby="basic-addon2">
-															<div class="input-group-append">
-																<span class="input-group-text" id="basic-addon2">
-																	meter
-																</span>
-															</div>
-														</div>
+														10 meter
 													</td>
 													<td>
 														<input disabled="" class="form-control m-input" type="text" value="Rp33,000" id="">
