Tambahan gambar header user hrd

--- a/admin_hrd/manajemen_user.html
+++ b/admin_hrd/manajemen_user.html
@@ -15,7 +15,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin HRD | Dashboard
+			Admin HRD | Manajemen User
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -144,7 +144,7 @@
 								</a>
 							</li>
 							<!-- Manajemen Penugasan -->
-							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+							<li class="m-menu__item" aria-haspopup="true" >
 								<a  href="manajemen_penugasan.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa fa-puzzle-piece"></i>
 									<span class="m-menu__link-title">
@@ -157,7 +157,7 @@
 								</a>
 							</li>
 							<!-- Kepuasan Pelanggan -->
-							<li class="m-menu__item" aria-haspopup="true" >
+							<li class="m-menu__item " aria-haspopup="true" >
 								<a  href="kepuasan_pelanggan.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa 	fa-thumbs-up"></i>
 									<span class="m-menu__link-title">
@@ -170,7 +170,7 @@
 								</a>
 							</li>
 							<!-- Manajemen User -->
-							<li class="m-menu__item  " aria-haspopup="true" >
+							<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
 								<a  href="manajemen_user.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa 		fa-user-o"></i>
 									<span class="m-menu__link-title">
@@ -193,22 +193,12 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									Manajemen Penugasan
+									Manajemen User
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
 										<a href="index.html" class="m-nav__link m-nav__link--icon">
 											<i class="m-nav__link-icon la la-home"></i>
-										</a>
-									</li>
-									<li class="m-nav__separator">
-										-
-									</li>
-									<li class="m-nav__item">
-										<a href="manajemen_penugasan.html" class="m-nav__link">
-											<span class="m-nav__link-text">
-												Penugasan
-											</span>
 										</a>
 									</li>
 								</ul>
@@ -217,118 +207,9 @@
 					</div>
 					<!-- END: Subheader -->
 					<div class="m-content">
-						<div class="row">
-							<div class="col-xl-12">
-								<div class="m-portlet m-portlet--mobile">
-									<div class="m-portlet__body">
-										<!--begin: Search Form -->
-										<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-											<div class="row align-items-center">
-												<div class="col-md-12">
-													<div class="form-group m-form__group row align-items-center">
-														<div class="col-md-4">
-															<div class="m-portlet__head-title">
-																<h3 class="m-portlet__head-text">
-																	List SPK
-																</h3>
-															</div>
-														</div>
-														<div class="col-md-4 offset-md-4">
-															<div class="m-input-icon m-input-icon--left">
-																<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-																<span class="m-input-icon__icon m-input-icon__icon--left">
-																	<span>
-																		<i class="la la-search"></i>
-																	</span>
-																</span>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_spk_pemasangan">
-											<thead>
-												<tr>
-													<th>No</th>
-													<th>Tanggal</th>
-													<th>No SPK</th>
-													<th>Nama Pelanggan</th>
-													<th>No Telpon</th>
-													<th>Tipe</th>
-													<th>Status</th>
-													<th>Aksi</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>1</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Hendy</td>
-													<td>085145322137</td>
-													<td>Pemasangan</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>2</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Pemasangan</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>3</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Bpk. Suminto</td>
-													<td>085145322137</td>
-													<td>Servis</td>
-													<td>Pengerjaan</td>
-													<td>
-														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>4</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Ida</td>
-													<td>085145322137</td>
-													<td>Survey</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-												<tr>
-													<td>5</td>
-													<td>20/19/2018</td>
-													<td>1923102301</td>
-													<td>Ibu Munna</td>
-													<td>085145322137</td>
-													<td>Pemasangan</td>
-													<td>Selesai</td>
-													<td>
-														<a href="rincian_spk_pemasangan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-										<!--end: Datatable -->
-									</div>
-								</div>
+						<div class="col-xl-12">
+							<div class="row">
+								
 							</div>
 						</div>
 					</div>
@@ -368,86 +249,6 @@
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
-		<script type="text/javascript">
-			var tbl_spk_pemasangan = $('#tbl_spk_pemasangan').mDatatable({
-				data: {
-					saveState: {cookie: false},
-					/*type: 'remote',
-			        source: {
-			          read: {
-			            // sample GET method
-			            method: 'GET',
-			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
-			            map: function(raw) {
-			              // sample data mapping
-			              var dataSet = raw;
-			              if (typeof raw.data !== 'undefined') {
-			                dataSet = raw.data;
-			              }
-			              return dataSet;
-			            },
-			          },
-			        },
-			        pageSize: 10,
-			        serverPaging: true,
-			        serverFiltering: true,
-			        serverSorting: true,*/
-			    },
-				// layout definition
-				layout: {
-					theme: 'default', // datatable theme
-					class: '', // custom wrapper class
-					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
-					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
-				},
-
-				// column sorting
-				sortable: false,
-				search: {
-					input: $('#generalSearch'),
-				},
-				columns: [
-
-				{
-					field: 'No',
-					textAlign: 'center',
-					width: 50
-				},
-				{
-					field: 'Tanggal',
-					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
-				},
-				{
-					field: 'No SPK',
-					textAlign: 'center',
-				},
-				{
-					field: 'Nama Pelanggan',
-					textAlign: 'center',
-				},
-				{
-					field: 'No Telpon',
-					textAlign: 'center',
-				},
-				{
-					field: 'Tipe',
-					textAlign: 'center',
-				},
-				{
-					field: 'Status',
-					textAlign: 'center',
-				},
-				{
-					field: 'Aksi',
-					textAlign: 'center',
-				}
-
-				],
-			});
-		</script>
 	</body>
 	<!-- end::Body -->
 	</html>
